Fix spacing between header & About page title

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -99,7 +99,6 @@
 
     .about-title h1 {
         margin-bottom: 30px;
-        padding-top: 120px;
     }
 
     .about-container {
@@ -145,8 +144,8 @@
     }
 
     .about-title h1 {
-        margin-bottom: 50px;
-        padding-top: 100px;
+        margin-bottom: 20px;
+        padding-top: 50px;
     }
 
     .about-container {
