--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,9 +230,10 @@ nav .nav-menu a:hover {
 .about-title h1 {
 	text-transform: capitalize;
 	text-align: center;
-	margin-bottom: 100px;
+	margin-bottom: 70px;
 	font-size: 30px;
-	padding-top: 150px;
+	padding-top: 100px;
+	padding-bottom: 10px;
 	position: relative;
 }
 
